--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
 
 .App {
   display: grid;
-  grid-template-columns: 0.05fr 1fr 1fr 0.05fr;
+  grid-template-columns: 0.05fr 1fr 1fr 0.5fr 0.05fr;
   grid-template-rows: 2fr 0.5fr;
   grid-gap: 10px;
   font-family: 'Roboto', sans-serif;
@@ -22,7 +22,7 @@ body {
   background-color: white;
   margin-top: 10px;
   grid-row: 1;
-  grid-column: 3/4;
+  grid-column: 3/5;
   object-fit: cover;
   box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.19);
   text-align: center;
@@ -49,6 +49,29 @@ body {
 
 .stock-company-info:hover {
   box-shadow: 0 1px 20px 0 rgba(0, 0, 0, 0.2), 0 1px 30px 0 rgba(0, 0, 0, 0.19);
+}
+
+.inside-info {
+  background-color: white;
+  margin-bottom: 10px;
+  grid-row: 2; 
+  grid-column: 4/5;
+  text-align: left;
+  padding-left: 20px;
+  padding-right: 20px;
+  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 10px;
+  transition: 0.1s;
+}
+
+.inside-info:hover {
+  box-shadow: 0 1px 20px 0 rgba(0, 0, 0, 0.2), 0 1px 30px 0 rgba(0, 0, 0, 0.19);
+}
+
+#info-output {
+  margin: 0;
+  max-height: 230px;
+  overflow:auto;
 }
 
 .news-app {
@@ -80,6 +103,8 @@ body {
 
 #stock-description {
   font-style: italic;
+  max-height: 230px;
+  overflow:auto;
 }
 
 #output {
@@ -105,6 +130,25 @@ body {
   transition: 0.1s;
 }
 .news-box:hover {
+  box-shadow: 0 1px 20px 0 rgba(250,188,60, 255), 0 1px 20px 0 rgba(250,188,60, 0.19);
+}
+
+.info-card {
+  background-color: #FABC3C;
+  margin: 10px;
+  padding: 10px 10px 10px 10px;
+  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  transition: 0.1s;
+}
+h5 {
+  margin: 0;
+}
+h6 {
+  margin: 20px;
+  font-size: 2em;
+}
+.info-card:hover {
   box-shadow: 0 1px 20px 0 rgba(250,188,60, 255), 0 1px 20px 0 rgba(250,188,60, 0.19);
 }
 
